<?xml version="1.0" encoding="UTF-8"?>

<!--
  Licensed to the Apache Software Foundation (ASF) under one
  or more contributor license agreements.  See the NOTICE file
  distributed with this work for additional information
  regarding copyright ownership.  The ASF licenses this file
  to you under the Apache License, Version 2.0 (the
  "License"); you may not use this file except in compliance
  with the License.  You may obtain a copy of the License at
  
  http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing,
  software distributed under the License is distributed on an
  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  KIND, either express or implied.  See the License for the
  specific language governing permissions and limitations
  under the License.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.apache.directory.project</groupId>
    <artifactId>project</artifactId>
    <version>17</version>
  </parent>

  <groupId>org.apache.directory.server</groupId>
  <artifactId>apacheds-parent</artifactId>
  <version>1.5.7</version>
  <name>ApacheDS</name>
  <packaging>pom</packaging>

  <properties>
    <projectName>Apache Directory Server</projectName>
    <distMgmtSiteUrl>scpexe://people.apache.org/www/directory.apache.org/apacheds/gen-docs/${version}/</distMgmtSiteUrl>

    <!-- Set versions for depending projects -->
    <org.apache.directory.shared.version>0.9.19</org.apache.directory.shared.version>
    <skin.version>1.0.1</skin.version>
    
    <!-- Set versions for depending jars -->
   <!--  <antlr.version>2.7.7</antlr.version> -->
    <!-- <bcprov.version>140</bcprov.version> -->
    <commons.cli.version>1.2</commons.cli.version>
    <commons.collections.version>3.2.1</commons.collections.version>
    <commons.daemon.version>1.0.1</commons.daemon.version>
    <commons.dbcp.version>1.2.2</commons.dbcp.version>
    <commons.io.version>1.4</commons.io.version>
    <commons.lang.version>2.6</commons.lang.version>
    <commons.net.version>2.0</commons.net.version>
    <commons.pool.version>1.5.4</commons.pool.version>
    <dnsjava.version>2.1.1</dnsjava.version>
    <junit.version>4.7</junit.version>
    <maven.archiver.version>2.2</maven.archiver.version>
    <maven.artifact.version>2.0.9</maven.artifact.version>
    <maven.plugin.api.version>2.0.9</maven.plugin.api.version>
    <maven.project.version>2.0.9</maven.project.version>
    <mina.core.version>2.0.5</mina.core.version>
    <slf4j.api.version>1.6.6</slf4j.api.version>
  </properties>

  <url>http://directory.apache.org/apacheds/1.5</url>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.apache.mina</groupId>
        <artifactId>mina-core</artifactId>
        <version>${mina.core.version}</version>
      </dependency>

      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>${commons.io.version}</version>
      </dependency>

      <dependency>
        <groupId>commons-collections</groupId>
        <artifactId>commons-collections</artifactId>
        <version>${commons.collections.version}</version>
      </dependency>

      <dependency>
        <groupId>commons-lang</groupId>
        <artifactId>commons-lang</artifactId>
        <version>${commons.lang.version}</version>
      </dependency>

      <dependency>
        <groupId>commons-net</groupId>
        <artifactId>commons-net</artifactId>
        <version>${commons.net.version}</version>
      </dependency>

      <dependency>
        <groupId>commons-pool</groupId>
        <artifactId>commons-pool</artifactId>
        <version>${commons.pool.version}</version>
      </dependency>

      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.api.version}</version>
      </dependency>

      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>jcl-over-slf4j</artifactId>
        <version>${slf4j.api.version}</version>
      </dependency>
  
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>log4j-over-slf4j</artifactId>
        <version>${slf4j.api.version}</version>
      </dependency>

      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>${junit.version}</version>
      </dependency>

      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-plugin-api</artifactId>
        <version>${maven.plugin.api.version}</version>
      </dependency>

      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-project</artifactId>
        <version>${maven.project.version}</version>
      </dependency>

      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-archiver</artifactId>
        <version>${maven.archiver.version}</version>
      </dependency>

      <dependency>
        <groupId>plexus</groupId>
        <artifactId>plexus-utils</artifactId>
        <version>${plexus.utils.version}</version>
      </dependency>

      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-artifact</artifactId>
        <version>${maven.artifact.version}</version>
      </dependency>
      
      <dependency>
        <groupId>dnsjava</groupId>
        <artifactId>dnsjava</artifactId>
        <version>${dnsjava.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <issueManagement>
    <system>JIRA</system>
    <url>http://issues.apache.org/jira/browse/DIRSERVER</url>
  </issueManagement>

  <distributionManagement>
    <site>
      <id>apache.directory.apacheds</id>
      <url>${distMgmtSiteUrl}</url>
    </site>
  </distributionManagement>

  <dependencies>
    <!-- apacheds standard logging interface -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
    </dependency>

    <!-- not sure what this is used for -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>jcl-over-slf4j</artifactId>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>log4j-over-slf4j</artifactId>
    </dependency>
    
    <!-- Most modules use commons-io in test -->
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <modules>
    <module>protocol-shared</module>
    <module>protocol-dns</module>
    <module>dns-server</module>
    <module>dns-stubs</module>
  </modules>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
        </configuration>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>2.5</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <reporting>
    <excludeDefaults>true</excludeDefaults>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-report-plugin</artifactId>
        <configuration>
          <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
          <aggregate>true</aggregate>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-jxr-plugin</artifactId>
        <configuration>
          <aggregate>true</aggregate>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-pmd-plugin</artifactId>
        <configuration>
          <linkXref>true</linkXref>
          <sourceEncoding>utf-8</sourceEncoding>
          <minimumTokens>100</minimumTokens>
          <targetJdk>1.6</targetJdk>
          <aggregate>true</aggregate>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>taglist-maven-plugin</artifactId>
        <configuration>
          <tags>
            <tag>TODO</tag>
            <tag>@todo</tag>
            <tag>@deprecated</tag>
            <tag>FIXME</tag>
          </tags>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <linksource>true</linksource>
          <tags>
            <tag>
              <name>org.apache.xbean.XBean</name>
              <placement>a</placement>
              <head>XBean</head>
            </tag>
            <tag>
              <name>org.apache.xbean.Property</name>
              <placement>a</placement>
              <head>XBean Property</head>
            </tag>
            <tag>
              <name>org.apache.xbean.DestroyMethod</name>
              <placement>a</placement>
              <head>XBean DestroyMethod</head>
            </tag>
            <tag>
              <name>note</name>
              <placement>a</placement>
              <head>NOTE</head>
            </tag>
            <tag>
              <name>todo</name>
              <placement>a</placement>
              <head>TODO</head>
            </tag>
            <tag>
              <name>warning</name>
              <placement>a</placement>
              <head>WARNING</head>
            </tag>
          </tags>
        </configuration>
        <reportSets>
          <reportSet>
            <reports>
              <report>aggregate</report>
              <report>test-aggregate</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>findbugs-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>cobertura-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
      </plugin>
    </plugins>
  </reporting>

  <scm>
    <connection>scm:svn:http://svn.apache.org/repos/asf/directory/apacheds/tags/1.5.7</connection>
    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/directory/apacheds/tags/1.5.7</developerConnection>
    <url>http://svn.apache.org/viewvc/directory/apacheds/tags/1.5.7</url>
  </scm>
</project>
